Search has been completed

--- a/src/app/dashboard/layout/components/header/header.component.html
+++ b/src/app/dashboard/layout/components/header/header.component.html
@@ -1,12 +1,13 @@
-<div class=" header tw-bg-[#94A684]">
+<div class=" header tw-bg-mainColor">
   <div class="tw-container tw-mx-auto tw-py-4 flex-c-b tw-flex-col md:tw-flex-row">
     <div class="tw-flex tw-items-center tw-gap-14 tw-mb-4 md:tw-mb-0">
       <div>
         <h1 class="tw-font-quraanFont tw-text-2xl tw-text-white tw-drop-shadow-lg tw-mb-0">قرءان كريم</h1>
       </div>
       <!-- menu -->
-      <nav>
-        <a routerLink="/listen" class="tw-text-white tw-text-base hover:tw-text-[#E4E4D0]">ضبط الاستماع</a>
+      <nav class="tw-space-x-4 rtl:tw-space-x-reverse">
+        <a routerLink="/listen" class="tw-text-white tw-text-base hover:tw-text-secondColor tw-font-medium">ضبط الاستماع</a>
+        <a routerLink="/search" class="tw-text-white tw-text-base hover:tw-text-secondColor tw-font-medium">إعدادت البحث</a>
       </nav>
     </div>
     <!-- search -->
