--- a/src/styles.scss
+++ b/src/styles.scss
@@ -373,3 +373,28 @@ input[type="checkbox"] + span {
 .mat-form-field-appearance-outline .mat-form-field-suffix{
   top: 0 !important;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #e4e4d0; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #94a684; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: beige; 
+}
+.mat-checkbox-layout {
+  direction: rtl !important;
+}
+.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background, .mat-checkbox-checked.mat-accent .mat-checkbox-background{
+  background-color: #94a684;
+}
