--- a/src/app/dashboard/listen/components/form/form.component.html
+++ b/src/app/dashboard/listen/components/form/form.component.html
@@ -170,12 +170,12 @@
   <!-- actions -->
   <div class="tw-mt-5">
     <button type="submit" (click)="isOpen = !isOpen"
-      class="tw-bg-secondColor tw-text-mainColor hover:tw-text-white tw-h-10 tw-px-4 hover:tw-bg-[#AEC3AE] transition-du200 disabled:tw-bg-gray-200 disabled:tw-cursor-no-drop disabled:tw-text-gray-400">
+      class="tw-bg-secondColor tw-text-mainColor tw-font-bold hover:tw-text-white tw-h-10 tw-px-4 hover:tw-bg-[#AEC3AE] transition-du200 disabled:tw-bg-gray-200 disabled:tw-cursor-no-drop disabled:tw-text-gray-400">
       بحث متقدم
     </button>
     <span class="tw-mx-1"></span>
     <button type="submit" (click)="rest()"
-      class="tw-bg-secondColor tw-text-mainColor hover:tw-text-white tw-h-10 tw-px-4 hover:tw-bg-[#AEC3AE] transition-du200 disabled:tw-bg-gray-200 disabled:tw-cursor-no-drop disabled:tw-text-gray-400">
+      class="tw-bg-secondColor tw-text-mainColor tw-font-bold hover:tw-text-white tw-h-10 tw-px-4 hover:tw-bg-[#AEC3AE] transition-du200 disabled:tw-bg-gray-200 disabled:tw-cursor-no-drop disabled:tw-text-gray-400">
       إعادة تعيين
     </button>
   </div>
