--- a/src/app/shared/main-search/main-search.component.html
+++ b/src/app/shared/main-search/main-search.component.html
@@ -12,7 +12,7 @@
     </mat-autocomplete>
   </div>
   <button type="submit" title="result-search" (click)="openSearchResult()"
-    class="tw-bg-secondColor tw-text-mainColor tw-h-10 tw-px-4 hover:tw-bg-[#AEC3AE] transition-du200">
+    class="tw-bg-secondColor tw-text-mainColor tw-font-bold tw-h-10 tw-px-4 hover:tw-bg-[#AEC3AE] transition-du200">
     <i class="sfi sfi-search-I tw-text-base tw-block"></i>
   </button>
 </div>
