--- a/src/app/dashboard/search/components/form/form.component.html
+++ b/src/app/dashboard/search/components/form/form.component.html
@@ -1,25 +1,25 @@
 <form class="tw-w-10/12 lg:tw-w-6/12 tw-m-auto tw-mt-8 tw-border tw-border-gray-200 tw-p-4 tw-space-y-5">
   <div class="tw-space-x-4 rtl:tw-space-x-reverse tw-border-b tw-border-gray-100 tw-pb-4 tw-pt-2 tw-text-center">
-    <mat-checkbox class="tw-text-xs">
+    <mat-radio-button class="tw-text-xs">
       <label for="" class="tw-font-medium tw-whitespace-break-spaces">
         عموم القرءان
       </label>
-    </mat-checkbox>
-    <mat-checkbox class="tw-text-xs">
+    </mat-radio-button>
+    <mat-radio-button class="tw-text-xs">
       <label for="" class="tw-font-medium tw-whitespace-break-spaces">
         بداية الايات
       </label>
-    </mat-checkbox>
-    <mat-checkbox class="tw-text-xs">
+    </mat-radio-button>
+    <mat-radio-button class="tw-text-xs">
       <label for="" class="tw-font-medium tw-whitespace-break-spaces">
         ترتيب ابجدي
       </label>
-    </mat-checkbox>
-    <mat-checkbox class="tw-text-xs">
+    </mat-radio-button>
+    <mat-radio-button class="tw-text-xs">
       <label for="" class="tw-font-medium tw-whitespace-break-spaces">
         ترتيب المصحف
       </label>
-    </mat-checkbox>
+    </mat-radio-button>
   </div>
   <div class="flex-c-b tw-gap-8 tw-flex-col md:tw-flex-row">
     <div class="tw-w-full md:tw-w-auto select-box tw-flex-1">
@@ -82,8 +82,7 @@
     <div class="tw-w-full md:tw-w-auto select-box tw-flex-1">
       <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block"> الجـزء</label>
       <div class="flex-box tw-gap-2">
-        <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
+        <mat-form-field appearance="outline" class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
           <mat-label class="tw-text-sm">من</mat-label>
           <span matSuffix
             class="sfi sfi-arrow-down1 tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -94,8 +93,7 @@
         </mat-form-field>
 
         <!-- إلى سورة -->
-        <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
+        <mat-form-field appearance="outline" class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
           <mat-label class="tw-text-sm">إلى</mat-label>
           <span matSuffix
             class="sfi sfi-arrow-down1 tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -108,8 +106,7 @@
     <div class="tw-w-full md:tw-w-auto select-box tw-flex-1">
       <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block"> الحـزب</label>
       <div class="flex-box tw-gap-2">
-        <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
+        <mat-form-field appearance="outline" class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
           <mat-label class="tw-text-sm">من</mat-label>
           <span matSuffix
             class="sfi sfi-arrow-down1 tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -120,8 +117,7 @@
         </mat-form-field>
 
         <!-- إلى سورة -->
-        <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
+        <mat-form-field appearance="outline" class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
           <mat-label class="tw-text-sm">إلى</mat-label>
           <span matSuffix
             class="sfi sfi-arrow-down1 tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -136,8 +132,7 @@
     <div class="tw-w-full md:tw-w-auto select-box tw-flex-1">
       <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block"> الربـع</label>
       <div class="flex-box tw-gap-2">
-        <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
+        <mat-form-field appearance="outline" class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
           <mat-label class="tw-text-sm">من</mat-label>
           <span matSuffix
             class="sfi sfi-arrow-down1 tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -148,8 +143,7 @@
         </mat-form-field>
 
         <!-- إلى سورة -->
-        <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
+        <mat-form-field appearance="outline" class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
           <mat-label class="tw-text-sm">إلى</mat-label>
           <span matSuffix
             class="sfi sfi-arrow-down1 tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -162,8 +156,7 @@
     <div class="tw-w-full md:tw-w-auto select-box tw-flex-1">
       <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block"> الصفحة</label>
       <div class="flex-box tw-gap-2">
-        <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
+        <mat-form-field appearance="outline" class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
           <mat-label class="tw-text-sm">من</mat-label>
           <span matSuffix
             class="sfi sfi-arrow-down1 tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -174,8 +167,7 @@
         </mat-form-field>
 
         <!-- إلى سورة -->
-        <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
+        <mat-form-field appearance="outline" class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
           <mat-label class="tw-text-sm">إلى</mat-label>
           <span matSuffix
             class="sfi sfi-arrow-down1 tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -186,19 +178,38 @@
       </div>
     </div>
   </div>
-  <!-- <div *ngIf="isOpen" class="tw-mt-4 tw-border-t tw-border-gray-200 tw-pt-4 tw-space-y-3">
 
-  </div> -->
+  <div class="tw-w-full md:tw-w-auto select-box tw-flex-1 select-w-w">
+    <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block">حدد ما تريد ظهوره فى جدول النتائج</label>
+    <mat-form-field appearance="outline" class="tw-w-full tw-bg-gray-100">
+      <mat-label>أختـر ...</mat-label>
+      <span matSuffix
+        class="sfi sfi-arrow-down1 tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
+      <mat-select [formControl]="toppings" multiple>
+        <mat-option [value]="name" *ngFor="let name of resultsList; track name">{{name}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div></div>
   <!-- actions -->
-  <div class="tw-mt-7">
-    <button type="submit" (click)="isOpen = !isOpen"
-      class="tw-bg-secondColor tw-text-mainColor hover:tw-text-white tw-h-10 tw-px-4 hover:tw-bg-[#AEC3AE] transition-du200 disabled:tw-bg-gray-200 disabled:tw-cursor-no-drop disabled:tw-text-gray-400">
-      حفـظ الإعدادات
-    </button>
-    <span class="tw-mx-1"></span>
-    <button type="submit" (click)="rest()"
-      class="tw-bg-secondColor tw-text-mainColor hover:tw-text-white tw-h-10 tw-px-4 hover:tw-bg-[#AEC3AE] transition-du200 disabled:tw-bg-gray-200 disabled:tw-cursor-no-drop disabled:tw-text-gray-400">
-      إعادة تعيين
-    </button>
+  <div class="tw-mt-10 flex-c-b">
+    <div class="tw-mt-4">
+      <mat-checkbox class="tw-text-sm">
+        <label for="" class="tw-font-medium tw-whitespace-break-spaces">
+          متطابق
+        </label>
+      </mat-checkbox>
+    </div>
+    <div>
+      <button type="submit" (click)="isOpen = !isOpen"
+        class="tw-bg-secondColor tw-text-mainColor tw-font-bold hover:tw-text-white tw-h-10 tw-px-4 hover:tw-bg-[#AEC3AE] transition-du200 disabled:tw-bg-gray-200 disabled:tw-cursor-no-drop disabled:tw-text-gray-400">
+        حفـظ الإعدادات
+      </button>
+      <span class="tw-mx-1"></span>
+      <button type="submit" (click)="rest()"
+        class="tw-bg-secondColor tw-text-mainColor tw-font-bold hover:tw-text-white tw-h-10 tw-px-4 hover:tw-bg-[#AEC3AE] transition-du200 disabled:tw-bg-gray-200 disabled:tw-cursor-no-drop disabled:tw-text-gray-400">
+        إعادة تعيين
+      </button>
+    </div>
   </div>
 </form>
