--- a/src/app/dashboard/search/components/search-table/search-table.component.html
+++ b/src/app/dashboard/search/components/search-table/search-table.component.html
@@ -1,7 +1,7 @@
 <div class="flex-c-b tw-mt-6">
   <span class="tw-font-bold tw-text-sm tw-block">عدد النتائج (32)</span>
   <button type="submit"
-  class="tw-bg-secondColor tw-text-mainColor hover:tw-text-white tw-h-10 tw-px-4 hover:tw-bg-[#AEC3AE] transition-du200 disabled:tw-bg-gray-200 disabled:tw-cursor-no-drop disabled:tw-text-gray-400">
+  class="tw-bg-secondColor tw-text-mainColor tw-font-bold hover:tw-text-white tw-h-10 tw-px-4 hover:tw-bg-[#AEC3AE] transition-du200 disabled:tw-bg-gray-200 disabled:tw-cursor-no-drop disabled:tw-text-gray-400">
   بحث متقدم
 </button>
 </div>
