--- a/src/app/dashboard/layout/components/header/header.component.html
+++ b/src/app/dashboard/layout/components/header/header.component.html
@@ -6,8 +6,8 @@
       </div>
       <!-- menu -->
       <nav class="tw-space-x-4 rtl:tw-space-x-reverse">
-        <a routerLink="/listen" class="tw-text-white tw-text-base hover:tw-text-secondColor tw-font-medium">ضبط الاستماع</a>
-        <a routerLink="/search" class="tw-text-white tw-text-base hover:tw-text-secondColor tw-font-medium">إعدادت البحث</a>
+        <a routerLink="/listen" class="tw-text-white tw-text-base hover:tw-text-secondColor tw-font-medium tw-inline-block"> ضبط الاستماع  </a>
+        <a routerLink="/search" class="tw-text-white tw-text-base hover:tw-text-secondColor tw-font-medium tw-inline-block">إعدادت البحث</a>
       </nav>
     </div>
     <!-- search -->
