--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
+
 @import url('https://fonts.googleapis.com/css2?family=Alkalami&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;400;500;600;700&display=swap');
 
@@ -430,4 +433,7 @@ input[type="checkbox"] + span {
 }
 .mat-select-min-line{
   font-weight: bold;
+}
+.owl-theme .owl-nav{
+  padding-bottom: 20px;
 }
