--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -1,90 +1,102 @@
 <div dir="ltr">
-    <div class="tw-grid tw-grid-cols-5 tw-gap-5">
-        <div class="tw-col-span-3">
-            <!-- info-colors -->
+
+    <div class="tw-grid tw-grid-cols-7 tw-gap-10">
+        <div class="tw-col-span-2 tw-space-y-10">
             <div
-                class="flex-box tw-gap-x-10 tw-gap-y-3 tw-flex-wrap tw-justify-end tw-border-b tw-border-gray-200 tw-pb-4">
-                <div class="tw-flex tw-items-end tw-flex-col tw-gap-y-2">
-                    <div class="flex-box tw-gap-2">
-                        <span>ثلاث مواضع</span>
-                        <div class="tw-bg-green-700 tw-w-4 tw-h-4"></div>
-                    </div>
-                    <div class="flex-box tw-gap-2">
-                        <span>اربع مواضع</span>
-                        <div class="tw-bg-red-700 tw-w-4 tw-h-4"></div>
-                    </div>
-                </div>
-                <div class="tw-flex tw-items-end tw-flex-col tw-gap-y-2">
-                    <div class="flex-box tw-gap-2">
-                        <span>موضعين </span>
-                        <div class="tw-bg-yellow-700 tw-w-4 tw-h-4"></div>
-                    </div>
-                    <div class="flex-box tw-gap-2">
-                        <span>كلمة وحيده بداية الاية </span>
-                        <div class="tw-bg-orange-700 tw-w-4 tw-h-4"></div>
-                    </div>
-                </div>
-                <div class="tw-flex tw-items-end tw-flex-col tw-gap-y-2">
-                    <div class="flex-box tw-gap-2">
-                        <span>ثلاث مواضع وسط الأية </span>
-                        <div class="tw-bg-amber-700 tw-w-4 tw-h-4"></div>
-                    </div>
-                    <div class="flex-box tw-gap-2">
-                        <span>موضعين وسط الاية </span>
-                        <div class="tw-bg-cyan-700 tw-w-4 tw-h-4"></div>
-                    </div>
-                </div>
-                <div class="tw-flex tw-items-end tw-flex-col tw-gap-y-2">
-                    <div class="flex-box tw-gap-2">
-                        <span>كلمة وحيده وسط الأية </span>
-                        <div class="tw-bg-indigo-700 tw-w-4 tw-h-4"></div>
-                    </div>
-                    <div class="flex-box tw-gap-2">
-                        <span>اكثر من اربعة مواضع </span>
-                        <div class="tw-bg-pink-700 tw-w-4 tw-h-4"></div>
-                    </div>
-                </div>
+                class="tw-border-2 tw-border-green-700 tw-col-span-1 tw-p-4 tw-pt-0 tw-flex tw-items-center tw-flex-col tw-gap-y-4 tw-divide-y ">
+                <h3 class="tw-mb-0 tw-pt-3 tw-font-medium">توجد في اكتر من ثلاث مواضع</h3>
+                <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-green-700">لقمان (2)</span>
+                <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-green-700">لقمان (2)</span>
+                <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-green-700">لقمان (2)</span>
             </div>
-            <!-- details -->
-            <div>
-                <h3 class="tw-font-medium tw-mt-4">شرح وتوضيع لمواضع الأيات</h3>
-                <div class="tw-grid tw-grid-cols-4 tw-gap-6" dir="rtl">
-                    <div class="tw-border tw-border-indigo-700 tw-col-span-1 tw-p-4 tw-flex tw-items-start tw-flex-col tw-gap-y-4">
-                        <span class="tw-text-base tw-text-indigo-700">لقمان (2)</span>
-                        <span class="tw-text-base tw-text-indigo-700">لقمان (2)</span>
-                        <span class="tw-text-base tw-text-indigo-700">لقمان (2)</span>
-                    </div>
-                    <div class="tw-border tw-border-pink-700 tw-col-span-1 tw-p-4 tw-flex tw-items-start tw-flex-col tw-gap-y-4">
-                        <span class="tw-text-base tw-text-pink-700">لقمان (2)</span>
-                        <span class="tw-text-base tw-text-pink-700">لقمان (2)</span>
-                        <span class="tw-text-base tw-text-pink-700">لقمان (2)</span>
-                    </div>
-                    <div class="tw-border tw-border-amber-700 tw-col-span-1 tw-p-4 tw-flex tw-items-start tw-flex-col tw-gap-y-4">
-                        <span class="tw-text-base tw-text-amber-700">لقمان (2)</span>
-                        <span class="tw-text-base tw-text-amber-700">لقمان (2)</span>
-                        <span class="tw-text-base tw-text-amber-700">لقمان (2)</span>
-                    </div>
-                    <div class="tw-border tw-border-red-700 tw-col-span-1 tw-p-4 tw-flex tw-items-start tw-flex-col tw-gap-y-4">
-                        <span class="tw-text-base tw-text-red-700">لقمان (2)</span>
-                        <span class="tw-text-base tw-text-red-700">لقمان (2)</span>
-                        <span class="tw-text-base tw-text-red-700">لقمان (2)</span>
-                    </div>
-                    <div class="tw-border tw-border-green-700 tw-col-span-1 tw-p-4 tw-flex tw-items-start tw-flex-col tw-gap-y-4">
-                        <span class="tw-text-base tw-text-green-700">لقمان (2)</span>
-                        <span class="tw-text-base tw-text-green-700">لقمان (2)</span>
-                        <span class="tw-text-base tw-text-green-700">لقمان (2)</span>
-                    </div>
-                    <div class="tw-border tw-border-cyan-700 tw-col-span-1 tw-p-4 tw-flex tw-items-start tw-flex-col tw-gap-y-4">
-                        <span class="tw-text-base tw-text-cyan-700">لقمان (2)</span>
-                        <span class="tw-text-base tw-text-cyan-700">لقمان (2)</span>
-                        <span class="tw-text-base tw-text-cyan-700">لقمان (2)</span>
-                    </div>
-                </div>
+            <div
+                class="tw-border-2 tw-border-yellow-700 tw-col-span-1 tw-p-4 tw-pt-0 tw-flex tw-items-center tw-flex-col tw-gap-y-4 tw-divide-y">
+                <h3 class="tw-mb-0 tw-pt-3 tw-font-medium">توجد في اكتر من ثلاث مواضع</h3>
+                <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-yellow-700">لقمان (2)</span>
+                <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-yellow-700">لقمان (2)</span>
+                <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-yellow-700">لقمان (2)</span>
+            </div>
+            <div
+                class="tw-border-2 tw-border-cyan-700 tw-col-span-1 tw-p-4 tw-pt-0 tw-flex tw-items-center tw-flex-col tw-gap-y-4 tw-divide-y">
+                <h3 class="tw-mb-0 tw-pt-3 tw-font-medium">توجد في اكتر من ثلاث مواضع</h3>
+                <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-cyan-700">لقمان (2)</span>
+                <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-cyan-700">لقمان (2)</span>
+                <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-cyan-700">لقمان (2)</span>
             </div>
         </div>
-        <div class="tw-col-span-2 tw-border-4 tw-border-[#e4e4d0] tw-pt-5">
+        <div class="tw-col-span-3 tw-border-4 tw-border-[#e4e4d0] tw-pt-5">
             <!-- images -->
             <app-quraanImages [images]="images"></app-quraanImages>
         </div>
+        <div class="tw-col-span-2">
+            <!-- details -->
+            <div class="tw-col-span-2 tw-space-y-10">
+                <div
+                    class="tw-border-2 tw-border-indigo-700 tw-col-span-1 tw-p-4 tw-pt-0 tw-flex tw-items-center tw-flex-col tw-gap-y-4 tw-divide-y ">
+                    <h3 class="tw-mb-0 tw-pt-3 tw-font-medium">توجد في اكتر من ثلاث مواضع</h3>
+                    <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-indigo-700">لقمان
+                        (2)</span>
+                    <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-indigo-700">لقمان
+                        (2)</span>
+                    <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-indigo-700">لقمان
+                        (2)</span>
+                </div>
+                <div
+                    class="tw-border-2 tw-border-pink-700 tw-col-span-1 tw-p-4 tw-pt-0 tw-flex tw-items-center tw-flex-col tw-gap-y-4 tw-divide-y">
+                    <h3 class="tw-mb-0 tw-pt-3 tw-font-medium">توجد في اكتر من ثلاث مواضع</h3>
+                    <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-pink-700">لقمان
+                        (2)</span>
+                    <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-pink-700">لقمان
+                        (2)</span>
+                    <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-pink-700">لقمان
+                        (2)</span>
+                </div>
+                <div
+                    class="tw-border-2 tw-border-amber-700 tw-col-span-1 tw-p-4 tw-pt-0 tw-flex tw-items-center tw-flex-col tw-gap-y-4 tw-divide-y">
+                    <h3 class="tw-mb-0 tw-pt-3 tw-font-medium">توجد في اكتر من ثلاث مواضع</h3>
+                    <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-amber-700">لقمان
+                        (2)</span>
+                    <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-amber-700">لقمان
+                        (2)</span>
+                    <span class="tw-block tw-w-full tw-text-center tw-text-base tw-pt-4 tw-text-amber-700">لقمان
+                        (2)</span>
+                </div>
+            </div>
+        </div>
     </div>
+        <!-- info-colors -->
+        <div class="flex-box tw-gap-x-7 tw-gap-y-3 tw-flex-wrap tw-justify-end tw-border tw-border-gray-300 tw-p-5 tw-mt-10">
+            <div class="flex-box tw-gap-2">
+                <span>ثلاث مواضع</span>
+                <div class="tw-bg-green-700 tw-w-4 tw-h-4"></div>
+            </div>
+            <div class="flex-box tw-gap-2">
+                <span>اربع مواضع</span>
+                <div class="tw-bg-red-700 tw-w-4 tw-h-4"></div>
+            </div>
+            <div class="flex-box tw-gap-2">
+                <span>موضعين </span>
+                <div class="tw-bg-yellow-700 tw-w-4 tw-h-4"></div>
+            </div>
+            <div class="flex-box tw-gap-2">
+                <span>كلمة وحيده بداية الاية </span>
+                <div class="tw-bg-orange-700 tw-w-4 tw-h-4"></div>
+            </div>
+            <div class="flex-box tw-gap-2">
+                <span>ثلاث مواضع وسط الأية </span>
+                <div class="tw-bg-amber-700 tw-w-4 tw-h-4"></div>
+            </div>
+            <div class="flex-box tw-gap-2">
+                <span>موضعين وسط الاية </span>
+                <div class="tw-bg-cyan-700 tw-w-4 tw-h-4"></div>
+            </div>
+            <div class="flex-box tw-gap-2">
+                <span>كلمة وحيده وسط الأية </span>
+                <div class="tw-bg-indigo-700 tw-w-4 tw-h-4"></div>
+            </div>
+            <div class="flex-box tw-gap-2">
+                <span>اكثر من اربعة مواضع </span>
+                <div class="tw-bg-pink-700 tw-w-4 tw-h-4"></div>
+            </div>
+        </div>
 </div>
