--- a/src/app/dashboard/search/components/form/form.component.html
+++ b/src/app/dashboard/search/components/form/form.component.html
@@ -224,7 +224,7 @@
 </form>
 
 <!-- popup-result -->
-<ng-template #addMatrix>
+<ng-template #searchResult>
   <header class="flex-c-b tw-border-b tw-border-gray-100 tw-pb-3 tw-mb-4">
     <h2 class="tw-mb-0">اعدادات البحث</h2>
     <button title="close" (click)="closeDialog()" mat-flat-button class="tw-bg-coral tw-w-8 tw-h-8 tw-min-w-0 tw-px-0">
